istio-vsvc-host/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-vsvc-host
spec:
  selector:
    app: istio-vsvc-host
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8080
