istio-vsvc-host/sample-admission-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "istio-vsvc-host"
webhooks:
- name: "istio-vsvc-host.hoge.fuga.local"
  failurePolicy: Fail
  # Webhook自体のPodやkube-systemのPodに影響してしまわないように
  objectSelector:
    matchLabels:
      webhook: enabled
  rules:
  - apiGroups: [""]
    operations: ["CREATE"]
    apiVersions: ["v1"]
    resources: ["pods"]
    scope: "Namespaced"
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNlakNDQVdLZ0F3SUJBZ0lVR2ExU2ljanRWTmJ5TzBtTzZ4d1JUTDBNcXBFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF4TUtiV2x1YVd0MVltVkRRVEFlRncweE9URXlNVEV3TlRJd01EQmFGdzB5TURFeQpNVEF3TlRJd01EQmFNQ1l4SkRBaUJnTlZCQU1URzJsemRHbHZMWFp6ZG1NdGFHOXpkQzVrWldaaGRXeDBMbk4yCll6QlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJKbUovTDlmZTVYWGRKKzdiQzljbXltWitMME4KY0ZMSk1LWFlnMDMyZkdVcU0ySzdPV3hDMWlTdTRWT3pTN2MwSGNSejY1UDdQQmV3Y2VkL2sxVUZicWVqZkRCNgpNQTRHQTFVZER3RU [...]
    service:
      namespace: default
      name: istio-vsvc-host
      path: /validate
  admissionReviewVersions: ["v1", "v1beta1"]
  timeoutSeconds: 5
  sideEffects: None
